test_programs/bad/7.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	game {
		name: Hedwig the Hedgehog
	}
}